Mon May 23 2016
1. Changes
   * Add initial support for model comparison tables via the memisc package

Wed Apr 27 2016
1. Changes
   * Avoid message from texreg when the R2MLwiN package is loaded
   * Update model comparisons in demos to use the texreg package

Tue Apr 26 2016
1. Changes
   * Add initial support for model comparison tables via the texreg package

Thu Apr 21 2016
1. Changes
   * Allow variables that contain a "." character to work with formulae

Mon Apr 11 2016
1. Changes
   * Use "get" function for clearing "foreach" package globals and updating the formula to satisfy CRAN checks

Wed Feb 03 2016
1. Changes
   * If a denominator is not specified generate a column of ones and use that instead

Tue Jan 05 2015
1. Changes
   * Run multiple MCMC seed example as parallel chains

Thu Dec 17 2015
1. Changes
   * Add group size summary information for non-missing data to the hierarchy slot

Wed Dec 16 2015
1. Changes
   * Return imputed datasets as a list of dataframes (in the imputations slot). This matches the input required by the mitools package.

Tue Dec 15 2015
1. Bug fixing
   * Ignore missing values when checking that responses have valid values

Fri Dec 04 2015
1. Changes
   * Add option to turn on simple notation when in debug mode

Thu Dec 03 2015
1. Changes
   * Turn off reserved column overwrite warning in generated macro

Fri Nov 27 2015
1. Changes
   * Allow specification of default gamma prior parameters

Thu Nov 12 2015
1. Bug fixing
   * Corrected the prior covariance matrix in the MCMCGuide06 demo

Fri Oct 16 2015
1. Bug fixing
   * Prevent MCMC refresh being higher than the total number of iterations

Fri Oct 09 2015
1. Bug fixing
   * Add missing data type check
   * Only run droplevels() where empty levels exist, also provide a warning when this happens

Tue Oct 05 2015
1. Changes
   * Check data for Binomial, Poisson and Negative-binomial responses to ensure it is appropriate

Thu Oct 01 2015
1. Bug fixing